<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="sdm.labs.sevilpon.millonario.Play"
    android:weightSum="1">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:text="@string/l_playing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_column="0"
                    android:id="@+id/l_playing" />

                <TextView
                    android:text="@string/lv_money"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:id="@+id/lv_money" />

                <TextView
                    android:text="@string/l_question"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_column="2"
                    android:id="@+id/l_question"
                    />

                <TextView
                    android:text="@string/lv_questionNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_column="3"
                    android:id="@+id/lv_questionNumber" />
            </LinearLayout>



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/lv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lv_QuestionGame"
                android:fontFamily="sans-serif"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4">

                <Button
                    android:text="@string/lv_resp1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button1" />

                <Button
                    android:text="@string/lv_resp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2" />

                <Button
                    android:text="@string/lv_resp3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3" />

                <Button
                    android:text="@string/lv_resp4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button4" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prueba2" />

        </TableRow>
    </TableLayout>
</LinearLayout>
