<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_credits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sdm.labs.sevilpon.millonario.Credits"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="@string/pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:id="@+id/textView2"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:layout_weight="0.06"
            android:textAlignment="center" />

        <TextView
            android:text="@string/autores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:id="@+id/textView3"
            android:layout_weight="0.06"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/p_se"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:id="@+id/textView5"
            android:layout_weight="0.06"
            android:textSize="24sp"
            android:textAlignment="center" />

        <TextView
            android:text="@string/p_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:id="@+id/textView4"
            android:layout_weight="0.06"
            android:textSize="24sp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:id="@+id/textView6"
            android:layout_weight="0.06"
            android:text="@string/copy"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:drawableLeft="@mipmap/copyright" />
    </LinearLayout>
</LinearLayout>
